--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
-    implementation 'junit:junit:4.13.1'
-	implementation 'junit:junit:4.13.1'
+    implementation 'junit:junit:4.13.2'
+	implementation 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
